test-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: test-server
  template:
    metadata:
      labels:
        component: test-server
    spec:
      containers:
        - name: test-server
          image: wemeter/test-server
          ports:
            - containerPort: 5000
