test-server-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-server-ip-service
spec:
  type: ClusterIP
  selector:
    component: test-server
  ports:
    - port: 5000
      targetPort: 5000
