web-ui-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui-ip-service
spec:
  type: ClusterIP
  selector:
    component: web-ui
  ports:
    - port: 3000
      targetPort: 3000
